--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
-    <title>animate sponsor</title>
+    <title>迷离 Lost</title>
     <script src="animate-lost-browser.js?"></script>
     <script>
         let queryData = getSearchData()
