--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>迷离 Lost</title>
-    <script src="animate-lost-browser.js?"></script>
+    <script src="animate-lost-browser.js?v=20230616110315"></script>
     <script>
         let queryData = getSearchData()
         console.log(queryData)
